--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,24 @@ span{
     padding-bottom: 50px;
     font-family:15px Arial, Helvetica, sans-serif;
   }
+
+#formLogin{
+    background-color:white;
+    width:100%;
+    height:0 auto;
+    min-height:600px;
+    padding-left: 100px;
+    padding-right:100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#formLogin2{
+    width:60%;
+    margin-left: 20%;
+    margin-top: 7%;
+    text-align: center;
+}
 .titulos{
     padding-top: 30px;
     padding-bottom: 10px;
@@ -69,4 +87,11 @@ span{
 #aprovacoesPendentes{
     padding-top: 30px;
     min-height: 600px;
+}
+
+#usuariosCadastrados{
+    padding-top: 50px;
+    min-height: 600px;
+    width: 80%;
+    margin-left: 10%;
 }
