--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,17 @@ span{
     padding-bottom: 50px;
     font-family:15px Arial, Helvetica, sans-serif;
   }
+  
+#finalizarPost{
+	background-color:white;
+    width:100%;
+    height:0 auto;
+    min-height:600px;
+    padding-top: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+	text-align:center;
+	font-size:25px;
+}
 
 #formLogin{
     background-color:white;
