Ajustes no retorno p/ o usuário

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,8 @@ span{
     height:0 auto;
     min-height:600px;
     padding-top: 200px;
+	padding-left: 5%;
+	padding-right: 5%;
     font-family: Arial, Helvetica, sans-serif;
 	text-align:center;
 	font-size:25px;
