--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,14 @@
     text-align:center;
 }
 
+#form5{
+    padding-top:15%;
+    width:100%;
+    height:600px;
+    display:none;
+    text-align:center;
+}
+
 span{
     display: inline-block; 
     padding-top:10px;
