--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,17 @@ span{
     font-family:15px Arial, Helvetica, sans-serif;
   }
   
+#configurar{
+	padding-left: 100px;
+	padding-right:100px;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:13px;
+	height: 0 auto;
+	min-height: 700px;
+}
+  
 #finalizarPost{
 	background-color:white;
     width:100%;
