--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 }
 
 #form1{
-    padding-top:12%;
+    padding-top:10%;
     width:100%;
     height:600px;
     display:none;
@@ -124,6 +124,13 @@ span{
     color:rgb(73, 73, 73);
   }
 
+.titulosLocal{
+    padding-top: 1px;
+    padding-bottom: 1px;
+    font-weight: bold;
+    color:rgb(73, 73, 73);
+}
+
 #aprovacoesPendentes{
     padding-top: 30px;
     min-height: 600px;
@@ -134,4 +141,58 @@ span{
     min-height: 600px;
     width: 80%;
     margin-left: 10%;
+}
+
+#alertaLocalViagem{
+    margin-left: 25%;
+    width: 50%;
+    display: none;
+}
+
+#botoesStyles{
+    width: 50%;
+    margin-left: 25%;
+}
+
+#camposNaoInformados{
+    padding-top:15%;
+    width:100%;
+    height:600px;
+    display:none;
+    text-align:center;
+}
+
+.alertaCamposNaoInformados{
+    margin-left: 25%;
+    width: 50%;
+    font-size: 20px;
+}
+
+.alinhaEsquerda{
+    text-align: left;
+}
+
+#privacy{
+    height: 0 auto;
+    min-height: 500px;
+    width: 60%;
+    margin-left: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    text-align: justify;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: white;
+  }
+
+.buttonMargin{
+    margin-left:-10px;
+}
+
+.fullWidth{
+    width: 100%;
+}
+
+.litteMarginLeft{
+    margin-left: 1px;
 }
