--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,4 +271,20 @@ span{
 .espacoEntreSessoes{
     padding-top: 10%
 }
+
+.subtituloConfiguraTextos{
+    margin-top: 30px;
+    padding-top: 30px;
+    font-size: medium;
+    font-weight: bold;
+    border-top: 1px solid;
+    border-color: darkgrey;
+}
+
+.tituloCards{
+    font-size: small;
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-top: 15px;
+}
   
