--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 }
 
 #form0{
-    padding-top:12%;
+    padding-top:150px;
     width:100%;
     height:600px;
     display:block;
@@ -16,15 +16,16 @@
 }
 
 #form1{
-    padding-top:10%;
+    padding-top:120px;
     width:100%;
-    height:600px;
+    min-height:600px;
+    height: 0 auto;
     display:none;
     text-align:center;
 }
 
 #form2{
-    padding-top:10%;
+    padding-top:40px;
     width:100%;
     height:600px;
     display:none;
@@ -32,14 +33,14 @@
 }
 
 #form3{
-    padding-top:10%;
+    padding-top:80px;
     width:100%;
     height:600px;
     display:none;
     text-align:center;
 }
 #form4{
-    padding-top:15%;
+    padding-top:100px;
     width:100%;
     height:600px;
     display:none;
@@ -47,7 +48,7 @@
 }
 
 #form5{
-    padding-top:15%;
+    padding-top:120px;
     width:100%;
     height:600px;
     display:none;
@@ -150,21 +151,23 @@ span{
 }
 
 #botoesStyles{
-    width: 50%;
-    margin-left: 25%;
+    width: 60%;
+    margin-left: 20%;
 }
 
 #camposNaoInformados{
-    padding-top:15%;
+    padding-top:140px;
+    padding-bottom: 10px;
     width:100%;
-    height:600px;
+    min-height:600px;
+    height: 0 auto;
     display:none;
     text-align:center;
 }
 
 .alertaCamposNaoInformados{
-    margin-left: 25%;
-    width: 50%;
+    margin-left: 20%;
+    width: 60%;
     font-size: 20px;
 }
 
@@ -285,6 +288,14 @@ span{
     font-size: small;
     font-weight: bold;
     margin-bottom: 5px;
+    margin-top: 15px;
+}
+
+.alinhaSvg{
+    margin-left: 6px;
+}
+
+.espacoSvg{
     margin-top: 15px;
 }
   
